feat: footer add

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,13 +1,3 @@
-.section-heading {
-    font-weight: bold;
-    position: relative;
-}
-.section-heading:before{
-    content: "";
-    position: absolute;
-    width: 50%;
-    height: 1px;
-    bottom: 0;
-    left: 25%;
-    border-bottom: 1px solid red;
+body {
+    margin: 0;
 }
